--- a/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
@@ -27,8 +27,21 @@ jobs:
 
       - name: compile
         run: |
-          git clone --depth=1 https://github.com/openhd/RK_Kernel 
+          git clone --depth=1 https://github.com/openhd/RK_Kernel
           cd RK_Kernel
+          cd drivers/net/wireless/
+          rm -Rf rtl8812au
+          rm -Rf rtl88x2bu
+          git clone https://github.com/openhd/rtl8812au/
+          git clone https://github.com/openhd/rtl88x2bu/
+          cd rtl8812au
+          sed -i 's/CONFIG_PLATFORM_I386_PC = y/CONFIG_PLATFORM_I386_PC = n/' Makefile || exit 1
+          sed -i 's/CONFIG_PLATFORM_ARM64_RPI = n/CONFIG_PLATFORM_ARM64_RPI = y/' Makefile || exit 1
+          cd ..
+          cd rtl88x2bu
+          sed -i 's/CONFIG_PLATFORM_I386_PC = y/CONFIG_PLATFORM_I386_PC = n/' Makefile || exit 1
+          sed -i 's/CONFIG_PLATFORM_ARM64_RPI = n/CONFIG_PLATFORM_ARM64_RPI = y/' Makefile || exit 1
+          cd ../../../../
           wget -q https://releases.linaro.org/components/toolchain/binaries/7.3-2018.05/aarch64-linux-gnu/gcc-linaro-7.3.1-2018.05-x86_64_aarch64-linux-gnu.tar.xz
           tar xvf gcc-linaro-7.3.1-2018.05-x86_64_aarch64-linux-gnu.tar.xz  -C /usr/local/
           apt-get -y install gcc-aarch64-linux-gnu device-tree-compiler libncurses5 libncurses5-dev build-essential libssl-dev mtools
