--- a/arch/arm64/boot/dts/rockchip/rk3568.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3568.dtsi
@@ -91,6 +91,14 @@
 			cpu-idle-states = <&CPU_SLEEP>;
 			#cooling-cells = <2>;
 			dynamic-power-coefficient = <187>;
+			power-model {
+				compatible = "simple-power-model";
+				leakage-range= <10 40>;
+				ls = <(-9196) 6360 0>;
+				static-coefficient = <100000>;
+				ts = <83822 206397 (-4300) 71>;
+				thermal-zone = "soc-thermal";
+			};
 		};
 
 		cpu1: cpu@100 {
@@ -141,14 +149,12 @@
 		opp-shared;
 
 		mbist-vmin = <825000 900000 950000>;
-		nvmem-cells = <&cpu_leakage>, <&core_pvtm>, <&mbist_vmin>, <&cpu_opp_info>;
-		nvmem-cell-names = "leakage", "pvtm", "mbist-vmin", "opp-info";
-		rockchip,max-volt = <1150000>;
+		nvmem-cells = <&cpu_leakage>, <&core_pvtm>, <&mbist_vmin>;
+		nvmem-cell-names = "leakage", "pvtm", "mbist-vmin";
 		rockchip,pvtm-voltage-sel = <
-			0        84000   0
-			84001    87000   1
-			87001    91000   2
-			91001    100000  3
+			0        82000   0
+			82001    93000   1
+			93001    100000  2
 		>;
 		rockchip,pvtm-freq = <408000>;
 		rockchip,pvtm-volt = <900000>;
@@ -163,73 +169,53 @@
 		rockchip,low-temp = <0>;
 		rockchip,low-temp-adjust-volt = <
 			/* MHz    MHz    uV */
-			   0      1992   75000
+			   0      1608   75000
 		>;
-
+		rockchip,avs-scale = <26>;
 		opp-408000000 {
 			opp-hz = /bits/ 64 <408000000>;
-			opp-microvolt = <850000 850000 1150000>;
-			opp-microvolt-L3 = <900000 900000 1150000>;
+			opp-microvolt = <825000 825000 1150000>;
 			clock-latency-ns = <40000>;
 		};
 		opp-600000000 {
 			opp-hz = /bits/ 64 <600000000>;
-			opp-microvolt = <850000 850000 1150000>;
-			opp-microvolt-L3 = <900000 900000 1150000>;
+			opp-microvolt = <825000 825000 1150000>;
 			clock-latency-ns = <40000>;
 		};
 		opp-816000000 {
 			opp-hz = /bits/ 64 <816000000>;
-			opp-microvolt = <850000 850000 1150000>;
-			opp-microvolt-L3 = <900000 900000 1150000>;
+			opp-microvolt = <825000 825000 1150000>;
 			clock-latency-ns = <40000>;
 			opp-suspend;
 		};
 		opp-1104000000 {
 			opp-hz = /bits/ 64 <1104000000>;
-			opp-microvolt = <900000 900000 1150000>;
-			opp-microvolt-L0 = <900000 900000 1150000>;
-			opp-microvolt-L1 = <850000 850000 1150000>;
-			opp-microvolt-L2 = <850000 850000 1150000>;
-			opp-microvolt-L3 = <900000 900000 1150000>;
+			opp-microvolt = <825000 825000 1150000>;
 			clock-latency-ns = <40000>;
 		};
 		opp-1416000000 {
 			opp-hz = /bits/ 64 <1416000000>;
-			opp-microvolt = <1025000 1025000 1150000>;
-			opp-microvolt-L0 = <1025000 1025000 1150000>;
-			opp-microvolt-L1 = <975000 975000 1150000>;
-			opp-microvolt-L2 = <950000 950000 1150000>;
-			opp-microvolt-L3 = <1000000 1000000 1150000>;
+			opp-microvolt = <925000 925000 1150000>;
 			clock-latency-ns = <40000>;
 		};
 		opp-1608000000 {
 			opp-hz = /bits/ 64 <1608000000>;
-			opp-microvolt = <1100000 1100000 1150000>;
-			opp-microvolt-L0 = <1100000 1100000 1150000>;
-			opp-microvolt-L1 = <1050000 1050000 1150000>;
-			opp-microvolt-L2 = <1025000 1025000 1150000>;
-			opp-microvolt-L3 = <1000000 1000000 1150000>;
+			opp-microvolt = <1000000 1000000 1000000>;
 			clock-latency-ns = <40000>;
 		};
 		opp-1800000000 {
 			opp-hz = /bits/ 64 <1800000000>;
-			opp-microvolt = <1150000 1150000 1150000>;
-			opp-microvolt-L0 = <1150000 1150000 1150000>;
-			opp-microvolt-L1 = <1100000 1100000 1150000>;
-			opp-microvolt-L2 = <1075000 1075000 1150000>;
-			opp-microvolt-L3 = <1050000 1050000 1150000>;
-			clock-latency-ns = <40000>;
+			opp-microvolt = <1050000 1050000 1050000>;
+			clock-latency-ns = <400000>;
 		};
 		opp-1992000000 {
 			opp-hz = /bits/ 64 <1992000000>;
 			opp-microvolt = <1150000 1150000 1150000>;
-			opp-microvolt-L0 = <1150000 1150000 1150000>;
-			opp-microvolt-L1 = <1150000 1150000 1150000>;
-			opp-microvolt-L2 = <1125000 1125000 1150000>;
-			opp-microvolt-L3 = <1100000 1100000 1150000>;
-			clock-latency-ns = <40000>;
+			clock-latency-ns = <400000>;
 		};
+
+
+
 	};
 
 	arm-pmu {
