--- a/arch/arm64/boot/dts/rockchip/rk3568.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3568.dtsi
@@ -229,8 +229,8 @@
 
 	cpuinfo {
 		compatible = "rockchip,cpuinfo";
-		nvmem-cells = <&otp_id>, <&otp_cpu_version>, <&cpu_code>, <&performance>;
-		nvmem-cell-names = "id", "cpu-version", "cpu-code", "performance";
+		nvmem-cells = <&otp_id>, <&otp_cpu_version>, <&cpu_code>;
+		nvmem-cell-names = "id", "cpu-version", "cpu-code";
 	};
 
 	display_subsystem: display-subsystem {
@@ -379,18 +379,18 @@
 			thermal-sensors = <&tsadc 0>;
 			trips {
 				threshold: trip-point-0 {
-					temperature = <65000>;
+					temperature = <60000>;
 					hysteresis = <2000>;
 					type = "passive";
 				};
 				target: trip-point-1 {
-					temperature = <85000>;
+					temperature = <75000>;
 					hysteresis = <2000>;
 					type = "passive";
 				};
 				soc_crit: soc-crit {
 					/* millicelsius */
-					temperature = <115000>;
+					temperature = <105000>;
 					/* millicelsius */
 					hysteresis = <2000>;
 					type = "critical";
@@ -417,7 +417,6 @@
 			thermal-sensors = <&tsadc 1>;
 		};
 	};
-	
 	timer {
 		compatible = "arm,armv8-timer";
 		interrupts = <GIC_PPI 13 (GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_HIGH)>,
@@ -579,15 +578,10 @@
 			resets = <&cru SRST_USB3OTG0>;
 			reset-names = "usb3-otg";
 			snps,dis_enblslpm_quirk;
-			snps,dis-u1-entry-quirk;
-			snps,dis-u2-entry-quirk;
 			snps,dis-u2-freeclk-exists-quirk;
 			snps,dis-del-phy-power-chg-quirk;
 			snps,dis-tx-ipgap-linecheck-quirk;
-			snps,dis_rxdet_inp3_quirk;
 			snps,xhci-trb-ent-quirk;
-			snps,parkmode-disable-ss-quirk;
-			quirk-skip-phy-init;
 			status = "disabled";
 		};
 	};
@@ -618,9 +612,7 @@
 			snps,dis-u2-freeclk-exists-quirk;
 			snps,dis-del-phy-power-chg-quirk;
 			snps,dis-tx-ipgap-linecheck-quirk;
-			snps,dis_rxdet_inp3_quirk;
 			snps,xhci-trb-ent-quirk;
-			snps,parkmode-disable-ss-quirk;
 			status = "disabled";
 		};
 	};
@@ -817,18 +809,15 @@
 		reg = <0x0 0xfdca8000 0x0 0x8000>;
 	};
 
-	edp_phy_grf: syscon@fdcb0000 {
-		compatible = "rockchip,rk3568-edp-phy-grf", "syscon", "simple-mfd";
-		reg = <0x0 0xfdcb0000 0x0 0x100>;
-		clocks = <&cru PCLK_EDPPHY_GRF>;
-
-		edp_phy: edp-phy {
-			compatible = "rockchip,rk3568-edp-phy";
-			clocks = <&pmucru XIN_OSC0_EDPPHY_G>;
-			clock-names = "refclk";
-			#phy-cells = <0>;
-			status = "disabled";
-		};
+	edp_phy: edp-phy@fdcb0000 {
+		compatible = "rockchip,rk3568-edp-phy";
+		reg = <0x0 0xfdcb0000 0x0 0x8000>;
+		clocks = <&pmucru XIN_OSC0_EDPPHY_G>, <&cru PCLK_EDPPHY_GRF>;
+		clock-names = "refclk", "pclk";
+		resets = <&cru SRST_P_EDPPHY_GRF>;
+		reset-names = "apb";
+		#phy-cells = <0>;
+		status = "disabled";
 	};
 
 	pcie30_phy_grf: syscon@fdcb8000 {
@@ -1109,14 +1098,13 @@
 		compatible = "operating-points-v2";
 
 		mbist-vmin = <825000 900000 950000>;
-		nvmem-cells = <&npu_leakage>, <&core_pvtm>, <&mbist_vmin>, <&npu_opp_info>;
-		nvmem-cell-names = "leakage", "pvtm", "mbist-vmin", "opp-info";
-		rockchip,max-volt = <1000000>;
+		nvmem-cells = <&npu_leakage>, <&core_pvtm>, <&mbist_vmin>;
+		nvmem-cell-names = "leakage", "pvtm", "mbist-vmin";
 		rockchip,temp-hysteresis = <5000>;
 		rockchip,low-temp = <0>;
 		rockchip,low-temp-adjust-volt = <
 			/* MHz    MHz    uV */
-			   0      1000    50000
+			   0      700    50000
 		>;
 		rockchip,pvtm-voltage-sel = <
 			0        84000   0
@@ -1128,53 +1116,35 @@
 
 		opp-200000000 {
 			opp-hz = /bits/ 64 <200000000>;
-			opp-microvolt = <850000 850000 1000000>;
+			opp-microvolt = <825000 850000 1000000>;
 		};
 		opp-300000000 {
 			opp-hz = /bits/ 64 <297000000>;
-			opp-microvolt = <850000 850000 1000000>;
+			opp-microvolt = <825000 850000 1000000>;
 		};
 		opp-400000000 {
 			opp-hz = /bits/ 64 <400000000>;
-			opp-microvolt = <850000 850000 1000000>;
+			opp-microvolt = <825000 850000 1000000>;
 		};
 		opp-600000000 {
 			opp-hz = /bits/ 64 <600000000>;
-			opp-microvolt = <850000 850000 1000000>;
+			opp-microvolt = <825000 850000 1000000>;
 		};
 		opp-700000000 {
 			opp-hz = /bits/ 64 <700000000>;
-			opp-microvolt = <875000 875000 1000000>;
-			opp-microvolt-L0 = <875000 875000 1000000>;
-			opp-microvolt-L1 = <850000 850000 1000000>;
-			opp-microvolt-L2 = <850000 850000 1000000>;
-			opp-microvolt-L3 = <850000 850000 1000000>;
+			opp-microvolt = <850000 850000 1000000>;
 		};
 		opp-800000000 {
 			opp-hz = /bits/ 64 <800000000>;
-			opp-microvolt = <925000 925000 1000000>;
-			opp-microvolt-L0 = <925000 925000 1000000>;
-			opp-microvolt-L1 = <900000 900000 1000000>;
-			opp-microvolt-L2 = <875000 875000 1000000>;
-			opp-microvolt-L3 = <875000 875000 1000000>;
+			opp-microvolt = <875000 875000 1000000>;
 		};
 		opp-900000000 {
 			opp-hz = /bits/ 64 <900000000>;
-			opp-microvolt = <975000 975000 1000000>;
-			opp-microvolt-L0 = <975000 975000 1000000>;
-			opp-microvolt-L1 = <950000 950000 1000000>;
-			opp-microvolt-L2 = <925000 925000 1000000>;
-			opp-microvolt-L3 = <900000 900000 1000000>;
+			opp-microvolt = <100000 925000 1000000>;
 		};
 		opp-1000000000 {
 			opp-hz = /bits/ 64 <1000000000>;
 			opp-microvolt = <1000000 1000000 1000000>;
-			opp-microvolt-L0 = <1000000 1000000 1000000>;
-			opp-microvolt-L1 = <975000 975000 1000000>;
-			opp-microvolt-L2 = <950000 950000 1000000>;
-			opp-microvolt-L3 = <925000 925000 1000000>;
-			status = "disabled";
-		};
 	};
 
 	bus_npu: bus-npu {
@@ -1193,29 +1163,28 @@
 		nvmem-cells = <&core_pvtm>;
 		nvmem-cell-names = "pvtm";
 		rockchip,pvtm-voltage-sel = <
-			0        84000   0
-			84001    91000   1
-			91001    100000  2
+			0        82000   0
+			82001    93000   1
+			93001    100000  2
 		>;
 		rockchip,pvtm-ch = <0 5>;
-
-		opp-700000000 {
-			opp-hz = /bits/ 64 <700000000>;
-			opp-microvolt = <900000>;
-			opp-microvolt-L0 = <900000>;
-			opp-microvolt-L1 = <875000>;
-			opp-microvolt-L2 = <875000>;
-		};
-		opp-900000000 {
-			opp-hz = /bits/ 64 <900000000>;
-			opp-microvolt = <900000>;
+		opp-1200000000 {
+			opp-hz = /bits/ 64 <1200000000>;
+			opp-microvolt = <1000000>;
+			opp-microvolt-L0 = <1000000>;
+			opp-microvolt-L1 = <1000000>;
+			opp-microvolt-L2 = <0>;
 		};
 		opp-1000000000 {
 			opp-hz = /bits/ 64 <1000000000>;
 			opp-microvolt = <950000>;
 			opp-microvolt-L0 = <950000>;
 			opp-microvolt-L1 = <925000>;
-			opp-microvolt-L2 = <900000>;
+			opp-microvolt-L2 = <0>;
+		};
+		opp-900000000 {
+			opp-hz = /bits/ 64 <900000000>;
+			opp-microvolt = <0>;
 		};
 	};
 
@@ -1232,41 +1201,31 @@
 	};
 
 	gpu: gpu@fde60000 {
-		compatible = "arm,mali-bifrost";
+		compatible = "rockchip,rk3568-mali", "arm,mali-bifrost";
 		reg = <0x0 0xfde60000 0x0 0x4000>;
 
-		interrupts = <GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>,
+		interrupts = <GIC_SPI 40 IRQ_TYPE_LEVEL_HIGH>,
 			     <GIC_SPI 41 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 40 IRQ_TYPE_LEVEL_HIGH>;
-		interrupt-names = "GPU", "MMU", "JOB";
+			     <GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-names = "job", "mmu", "gpu";
 
 		upthreshold = <40>;
 		downdifferential = <10>;
 
 		clocks = <&scmi_clk 1>, <&cru CLK_GPU>;
-		clock-names = "clk_mali", "clk_gpu";
-		power-domains = <&power RK3568_PD_GPU>;
+		clock-names = "gpu", "bus";
 		#cooling-cells = <2>;
 		operating-points-v2 = <&gpu_opp_table>;
-
+		power-domains = <&power RK3568_PD_GPU>;
 		status = "disabled";
-		gpu_power_model: power-model {
-			compatible = "simple-power-model";
-			leakage-range= <5 15>;
-			ls = <(-24002) 22823 0>;
-			static-coefficient = <100000>;
-			dynamic-coefficient = <953>;
-			ts = <(-108890) 63610 (-1355) 20>;
-			thermal-zone = "gpu-thermal";
-		};
 	};
 
 	gpu_opp_table: opp-table2 {
 		compatible = "operating-points-v2";
 
 		mbist-vmin = <825000 900000 950000>;
-		nvmem-cells = <&gpu_leakage>, <&core_pvtm>, <&mbist_vmin>, <&gpu_opp_info>;
-		nvmem-cell-names = "leakage", "pvtm", "mbist-vmin", "opp-info";
+		nvmem-cells = <&gpu_leakage>, <&core_pvtm>, <&mbist_vmin>;
+		nvmem-cell-names = "leakage", "pvtm", "mbist-vmin";
 		rockchip,max-volt = <1000000>;
 		rockchip,temp-hysteresis = <5000>;
 		rockchip,low-temp = <0>;
@@ -1277,8 +1236,7 @@
 		rockchip,pvtm-voltage-sel = <
 			0        84000   0
 			84001    87000   1
-			87001    91000   2
-			91001    100000  3
+			91001    100000  2
 		>;
 		rockchip,pvtm-ch = <0 5>;
 
@@ -1533,26 +1491,22 @@
 		nvmem-cells = <&core_pvtm>;
 		nvmem-cell-names = "pvtm";
 		rockchip,pvtm-voltage-sel = <
-			0        84000   0
-			84001    91000   1
+			0        82000   0
+			82001    91000   1
 			91001    100000  2
 		>;
 		rockchip,pvtm-ch = <0 5>;
 
 		opp-297000000 {
 			opp-hz = /bits/ 64 <297000000>;
-			opp-microvolt = <900000>;
-			opp-microvolt-L0 = <900000>;
-			opp-microvolt-L1 = <875000>;
-			opp-microvolt-L2 = <875000>;
-			opp-microvolt-L3 = <900000>;
+			opp-microvolt = <0>;
 		};
 		opp-400000000 {
 			opp-hz = /bits/ 64 <400000000>;
 			opp-microvolt = <950000>;
 			opp-microvolt-L0 = <950000>;
 			opp-microvolt-L1 = <925000>;
-			opp-microvolt-L2 = <900000>;
+			opp-microvolt-L2 = <0>;
 		};
 	};
 
@@ -1739,7 +1693,7 @@
 		rockchip,grf = <&grf>;
 		power-domains = <&power RK3568_PD_VI>;
 		iommus = <&rkisp_mmu>;
-		rockchip,iq-feature = /bits/ 64 <0x1BFBFFFE67FF>;
+		rockchip,iq-feature = /bits/ 64 <0x3FBFFFE67FF>;
 		status = "disabled";
 	};
 
@@ -2282,8 +2236,8 @@
 		operating-points-v2 = <&dmc_opp_table>;
 		vop-bw-dmc-freq = <
 		/* min_bw(MB/s) max_bw(MB/s) freq(KHz) */
-			0	286	324000
-			287	99999	528000
+			0	505	324000
+			506	99999	528000
 		>;
 		vop-frame-bw-dmc-freq = <
 		/* min_bw(MB/s) max_bw(MB/s) freq(KHz) */
@@ -2340,7 +2294,7 @@
 		rockchip,low-temp = <0>;
 		rockchip,low-temp-adjust-volt = <
 			/* MHz    MHz    uV */
-			   0      1560   75000
+			   0      1560   25000
 		>;
 		rockchip,leakage-voltage-sel = <
 			1   80    0
@@ -2356,7 +2310,7 @@
 			opp-hz = /bits/ 64 <1560000000>;
 			opp-microvolt = <900000 900000 1000000>;
 			opp-microvolt-L0 = <900000 900000 1000000>;
-			opp-microvolt-L1 = <875000 875000 1000000>;
+			opp-microvolt-L1 = <850000 850000 1000000>;
 		};
 	};
 
