--- a/arch/arm64/boot/dts/rockchip/rk3566.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3566.dtsi
@@ -42,7 +42,7 @@
 };
 
 &usbdrd_dwc3 {
-	phys = <&u2phy0_otg>;
+	phys = <&u2phy0_host>;
 	phy-names = "usb2-phy";
 	extcon = <&usb2phy0>;
 	maximum-speed = "high-speed";
